fix layout; remove align-items property from .contant for improved layout

--- a/style.css
+++ b/style.css
@@ -164,7 +164,6 @@ body
 .contant
 {
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 .about
